.toList() → .collect(Collectors.toList())로 변경